Fix LIT tests on Windows
Summary:
This diff includes
* Fixes to LIT tests setup so that most of them success on Windows.
* Disable 6 LIT tests on Windows (which will be worked on later).

Reviewed By: dulinriley

Differential Revision: D17076467

fbshipit-source-id: 7b4ec18baa5b19faa34461f72af110c738f8ee7a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -496,15 +496,15 @@ set(HERMES_LIT_TEST_PARAMS
   use_flowparser=${HERMES_USE_FLOWPARSER}
   jit_enabled=${HERMESVM_JIT}
   jit_disassembler_enabled=${HERMESVM_JIT_DISASSEMBLER}
-  hbc_deltaprep=${HERMES_BINARY_DIR}/bin/hbc-deltaprep
-  FileCheck=${LLVM_BUILD_DIR}/bin/FileCheck
-  hermes=${HERMES_BINARY_DIR}/bin/hermes
-  hermesc=${HERMES_BINARY_DIR}/bin/hermesc
-  hdb=${HERMES_BINARY_DIR}/bin/hdb
-  hbcdump=${HERMES_BINARY_DIR}/bin/hbcdump
-  repl=${HERMES_BINARY_DIR}/bin/hermes-repl
-  hbc-deltaprep=${HERMES_BINARY_DIR}/bin/hbc-deltaprep
-  hbc_diff=${HERMES_BINARY_DIR}/bin/hbc-diff
+  hbc_deltaprep=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hbc-deltaprep
+  FileCheck=${LLVM_BUILD_DIR}/${CMAKE_CFG_INTDIR}/bin/FileCheck
+  hermes=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hermes
+  hermesc=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hermesc
+  hdb=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hdb
+  hbcdump=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hbcdump
+  repl=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hermes-repl
+  hbc-deltaprep=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hbc-deltaprep
+  hbc_diff=${HERMES_BINARY_DIR}/${CMAKE_CFG_INTDIR}/bin/hbc-diff
   build_mode=${HERMES_ASSUMED_BUILD_MODE_IN_LIT_TEST}
   exception_on_oom_enabled=${HERMESVM_EXCEPTION_ON_OOM}
   serialize_enabled=${HERMESVM_SERIALIZE}
