--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -1,5 +1,6 @@
 import lit
 import os
+import sys
 
 def isTrue(v):
   """Check whether a string converts to True according to CMake rules"""
@@ -38,6 +39,12 @@ if lit_config.params["build_mode"] != "opt":
   config.available_features.add("debug_options")
   if lit_config.params["build_mode"] == "dbg":
     config.available_features.add("slow_debug")
+
+if sys.platform.startswith('cygwin'):
+  lit_config.fatal('Running Hermes LIT tests in cygwin Python is not '
+      + 'supported. Please use regular Python on Windows.')
+if os.name == 'nt':
+  config.available_features.add("windows")
 
 # Note substitutions are applied in order.
 # %hermesc must appear before %hermes, or else %hermes will substitute *inside* %hermesc
