Add current_rss to oscompat
Summary:
Add `current_rss` with an implementation for Linux, MacOS, and Windows.
This is a mirror to `peak_rss`, but instead of returning the maximum used memory,
returns the currently used memory.

Reviewed By: kodafb

Differential Revision: D17064924

fbshipit-source-id: 778251913f9050e8e8c1ebf0a3a927fceac59651

--- a/unittests/Support/CMakeLists.txt
+++ b/unittests/Support/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SupportSources
   JSONEmitterTest.cpp
   LEB128Test.cpp
   OptValueTest.cpp
+  OSCompatTest.cpp
   PageAccessTrackerTest.cpp
   PlatformLoggingTest.cpp
   RegexTest.cpp
