Move SynthTrace parse into TraceInterpreter library
Summary:
There was a build size regression because `SynthTrace` started pulling in the parser.
Split out parsing separately from `SynthTrace` so that the parsing is only used when it's needed to run
the benchmarks.

Reviewed By: kodafb

Differential Revision: D17175144

fbshipit-source-id: 1a4871ecf3983056291df2ee8f1f1e218cf97771

--- a/API/hermes/CMakeLists.txt
+++ b/API/hermes/CMakeLists.txt
@@ -8,6 +8,7 @@ set(LLVM_OPTIONAL_SOURCES
   hermes_tracing.cpp
   DebuggerAPI.cpp
   SynthTrace.cpp
+  SynthTraceParser.cpp
   TraceInterpreter.cpp
   TracingRuntime.cpp
   CompileJS.cpp
