Disable slow and regular asserts in Android dev builds
Summary:
We were building Android OSS dev builds with HERMES_SLOW_DEBUG and
without NDEBUG. This causes them to be significantly slower than
necessary.

Reviewed By: avp

Differential Revision: D17186406

fbshipit-source-id: ecc0b670f8dc43e270a60c139b5eed44ae9915dd

--- a/android/hermes/build.gradle
+++ b/android/hermes/build.gradle
@@ -29,6 +29,7 @@ android {
         arguments "-DLLVM_BUILD_BASE=${hermes_ws}/llvm"
         arguments "-DLLVM_SRC_DIR=${hermes_ws}/llvm"
         arguments "-DFBSOURCE_DIR=${fbsource}"
+        arguments "-DHERMES_SLOW_DEBUG=False"
         targets "libhermes"
       }
     }
