--- a/unittests/Support/CMakeLists.txt
+++ b/unittests/Support/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SupportSources
   Algorithms.cpp
   AllocatorTest.cpp
   CheckedMalloc.cpp
+  CompactArrayTest.cpp
   ConsumableRangeTest.cpp
   ConversionsTest.cpp
   CtorConfigTest.cpp
