Record inline caching misses during execution
Summary:
This diff adds the implementation of data structure that keeps track of inline caching misses during the execution.

Whenever an inline caching miss is detected. The inline caching profiler adds a record in the data structure, which is a two-layer hash map. The first layer is indexed by source location (i.e., code block pointer and instruction offset), the second layer is indexed by the tuple of <property id, object hidden class, cached hidden class>.

Reviewed By: dulinriley

Differential Revision: D17165022

fbshipit-source-id: 23880f597ff5a2f46618292e5d1c0f6a56eefade

--- a/lib/VM/CMakeLists.txt
+++ b/lib/VM/CMakeLists.txt
@@ -45,6 +45,7 @@ set(source_files
   RuntimeModule.cpp
   RuntimeStats.cpp
   Profiler/ChromeTraceSerializerPosix.cpp
+  Profiler/InlineCacheProfiler.cpp
   Profiler/SamplingProfilerWindows.cpp
   Profiler/SamplingProfilerPosix.cpp
   Serializer.cpp
