Remove 'aar/' prefix from AAR file paths.
Summary:
The 'aar/' subdirectory was introduced in PR #74. This changes it back, to
retain compatibility with existing versions.

Reviewed By: jbower-fb

Differential Revision: D17330056

fbshipit-source-id: 28722e874024ad16b2f5fbba4bbc3e7d4669610f

--- a/android/hermes/build.gradle
+++ b/android/hermes/build.gradle
@@ -69,14 +69,14 @@ android {
     def aarDir = "$buildDir/outputs/aar"
     tasks.named("assembleDebug").configure {
       doLast {
-        file("$aarDir/hermes-debug.aar").renameTo("${rootProject.ext.outputDir}/aar/hermes-debug.aar")
-        file("$aarDir/hermes.aar").renameTo("${rootProject.ext.outputDir}/aar/hermes-debug.aar")
+        file("$aarDir/hermes-debug.aar").renameTo("${rootProject.ext.outputDir}/hermes-debug.aar")
+        file("$aarDir/hermes.aar").renameTo("${rootProject.ext.outputDir}/hermes-debug.aar")
       }
     }
     tasks.named("assembleRelease").configure {
       doLast {
-        file("$aarDir/hermes-release.aar").renameTo("${rootProject.ext.outputDir}/aar/hermes-release.aar")
-        file("$aarDir/hermes.aar").renameTo("${rootProject.ext.outputDir}/aar/hermes-release.aar")
+        file("$aarDir/hermes-release.aar").renameTo("${rootProject.ext.outputDir}/hermes-release.aar")
+        file("$aarDir/hermes.aar").renameTo("${rootProject.ext.outputDir}/hermes-release.aar")
       }
     }
   }
