Add CPP runtime files to the NPM
Summary: This adds the CPP runtime libraries to the npm, for anyone who wishes to use them

Reviewed By: jbower-fb

Differential Revision: D17330055

fbshipit-source-id: dadaa7b42404bb8b0b3ec511b50a39a8b6a414ba

--- a/npm/package.json
+++ b/npm/package.json
@@ -12,6 +12,8 @@
     "README.md",
     "android/hermes-debug.aar",
     "android/hermes-release.aar",
+    "android/hermes-cppruntime-debug.aar",
+    "android/hermes-cppruntime-release.aar",
     "android/include/**/*.h",
     "osx-bin/hermes",
     "osx-bin/hermes-repl",
