Fix compilation errors with Platform Logging enabled; fix in cmake build.
Summary:
Fix two build issues related to platform logging:

1) Building an app with platform logging enabled failed with a compilation error.  Simple fix; needed a "static".

2) The CMake build didn't mention platform logging.

Reviewed By: tmikov

Differential Revision: D17262108

fbshipit-source-id: d59d0b97803640fbac304edad709bb53970cbd23

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,9 @@ set(HERMES_FACEBOOK_BUILD OFF CACHE BOOL
 set(HERMESVM_EXCEPTION_ON_OOM OFF CACHE BOOL
     "GC Out-of-memory raises an exception, rather than causing a crash")
 
+set(HERMESVM_PLATFORM_LOGGING OFF CACHE BOOL
+    "hermesLog(...) is enabled, using the platform's logging mechanism")
+
 set(HERMESVM_JIT OFF CACHE BOOL
   "Enable the JIT")
 
@@ -218,6 +221,9 @@ if(HERMES_FACEBOOK_BUILD)
 endif()
 if(HERMESVM_EXCEPTION_ON_OOM)
     add_definitions(-DHERMESVM_EXCEPTION_ON_OOM)
+endif()
+if(HERMESVM_PLATFORM_LOGGING)
+    add_definitions(-DHERMESVM_PLATFORM_LOGGING)
 endif()
 if(HERMESVM_JIT)
   add_definitions(-DHERMESVM_JIT)
