Runtime to execute internal bytecode
Summary:
This teaches Hermes Runtime to execute its internal bytecode file
at launch. The VM takes a dependency on the InternalBytecode library.

Reviewed By: avp

Differential Revision: D10281990

fbshipit-source-id: 8649b8a1737a320079e12c476c94a6a111983237

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,13 +47,21 @@ jobs:
           name: Build LLVM
           command: |
             cd "$HERMES_WS_DIR"
-            hermes/utils/build/build_llvm.py --target llvm-tblgen llvm llvm_build
+            hermes/utils/build/build_llvm.py llvm llvm_build
       - run:
           name: Crosscompile LLVM
           command: |
             export ANDROID_SDK="$ANDROID_HOME"
             export ANDROID_NDK="$ANDROID_HOME/ndk-bundle"
             cd "$HERMES_WS_DIR" && hermes/utils/crosscompile_llvm.sh
+      - run:
+          name: Build Hermes Compiler
+          command: |
+            cd "$HERMES_WS_DIR"
+            hermes/utils/build/configure.py ./build ./llvm_build ./llvm
+            # Build the Hermes compiler so that the cross compiler build can
+            # access it to build the VM
+            cmake --build ./build --target hermesc
       - run:
           name: Build Hermes for Android
           command: |
