--- a/lib/VM/CMakeLists.txt
+++ b/lib/VM/CMakeLists.txt
@@ -180,6 +180,7 @@ add_llvm_library(hermesVMRuntime STATIC ${source_files}
     hermesParser
     hermesPlatform
     hermesHBCBackend
+    hermesInternalBytecode
     dtoa
     ${CORE_FOUNDATION}
 )
