Add internal bytecode target
Summary:
This adds a target to build internal bytecode. The internal bytecode is a
C++ library generated by compiling files in hermes/lib/InternalBytecode/js
to Hermes bytecode, converting those to a C header file via xxd -i, and
then linking them in as an object file

Nothing links the library yet.

Reviewed By: tmikov

Differential Revision: D10281991

fbshipit-source-id: c6f086baf8651fe583c46abda6a5ade30cbd5a24

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -60,3 +60,4 @@ add_subdirectory(BCGen)
 add_subdirectory(ConsoleHost)
 add_subdirectory(Regex)
 add_subdirectory(Platform)
+add_subdirectory(InternalBytecode)
