Add sandcastle test for inline cache profiler
Summary:
This diff adds a LIT test for inline cache profiler.

See D17618498 to see a scenario (without the inline cache fix) where this sandcastle test failed:

https://our.intern.facebook.com/intern/sandcastle/log/?instance_id=36028797164047455&step_id=36028798406800665&step_index=7&name=Test

Reviewed By: dulinriley

Differential Revision: D17586664

fbshipit-source-id: efbdf657d3f94e2574fc80e939efc7c4e18855cd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,17 +192,23 @@ add_definitions(-DHERMESVM_GC_${HERMESVM_GCKIND})
 if(HERMESVM_GC_GENERATIONAL_MARKSWEEPCOMPACT)
     add_definitions(-DHERMESVM_GC_GENERATIONAL_MARKSWEEPCOMPACT)
 endif()
+
+set(HERMES_PROFILER_MODE_IN_LIT_TEST "NONE")
 if(HERMESVM_PROFILER_OPCODE)
     add_definitions(-DHERMESVM_PROFILER_OPCODE)
+    set(HERMES_PROFILER_MODE_IN_LIT_TEST "OPCODE")
 endif()
 if(HERMESVM_PROFILER_BB)
     add_definitions(-DHERMESVM_PROFILER_BB)
+    set(HERMES_PROFILER_MODE_IN_LIT_TEST "BB")
 endif()
 if(HERMESVM_PROFILER_JSFUNCTION)
     add_definitions(-DHERMESVM_PROFILER_JSFUNCTION)
+    set(HERMES_PROFILER_MODE_IN_LIT_TEST "SAMPLING")
 endif()
 if(HERMESVM_PROFILER_NATIVECALL)
     add_definitions(-DHERMESVM_PROFILER_NATIVECALL)
+    set(HERMES_PROFILER_MODE_IN_LIT_TEST "EXTERN")
 endif()
 if(HERMESVM_INDIRECT_THREADING)
     add_definitions(-DHERMESVM_INDIRECT_THREADING)
@@ -508,6 +514,7 @@ set(HERMES_LIT_TEST_PARAMS
   build_mode=${HERMES_ASSUMED_BUILD_MODE_IN_LIT_TEST}
   exception_on_oom_enabled=${HERMESVM_EXCEPTION_ON_OOM}
   serialize_enabled=${HERMESVM_SERIALIZE}
+  profiler=${HERMES_PROFILER_MODE_IN_LIT_TEST}
   )
 
 set(LLVM_LIT_ARGS "-sv")
