--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -35,6 +35,9 @@ if isTrue(lit_config.params["exception_on_oom_enabled"]):
 if isTrue(lit_config.params['serialize_enabled']):
   config.available_features.add("serializer")
 
+if lit_config.params["profiler"] == "BB":
+    config.available_features.add("basic_block_profiler")
+
 if lit_config.params["build_mode"] != "opt":
   config.available_features.add("debug_options")
   if lit_config.params["build_mode"] == "dbg":
