Internal bytecode round 2
Summary:
The previous attempt to allow internal bytecode had a bug that caused an assertion failure in some
builds.
Bring the code back, but add an ifdef for `HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION` to avoid
enabling it always.

For now, it is off by default in CMake.

Reviewed By: ridiculousfish

Differential Revision: D17621584

fbshipit-source-id: 7967bcac08acc40a4975cf9a8f8f98c892e01340

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,9 @@ set(HERMESVM_PLATFORM_LOGGING OFF CACHE BOOL
 set(HERMESVM_JIT OFF CACHE BOOL
   "Enable the JIT")
 
+set(HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION OFF CACHE BOOL
+  "Enable using JS to implement parts of Hermes")
+
 set(HERMESVM_JIT_DISASSEMBLER OFF CACHE BOOL
   "Enable the JIT disassembler")
 
@@ -233,6 +236,9 @@ if(HERMESVM_JIT)
 endif()
 if(HERMESVM_JIT_DISASSEMBLER)
   add_definitions(-DHERMESVM_JIT_DISASSEMBLER)
+endif()
+if(HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION)
+  add_definitions(-DHERMESVM_USE_JS_LIBRARY_IMPLEMENTATION)
 endif()
 if (NOT (ANDROID_LINUX_PERF_PATH STREQUAL ""))
   add_definitions(-DANDROID_LINUX_PERF_PATH="${ANDROID_LINUX_PERF_PATH}")
@@ -515,6 +521,7 @@ set(HERMES_LIT_TEST_PARAMS
   exception_on_oom_enabled=${HERMESVM_EXCEPTION_ON_OOM}
   serialize_enabled=${HERMESVM_SERIALIZE}
   profiler=${HERMES_PROFILER_MODE_IN_LIT_TEST}
+  use_js_library_implementation=${HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION}
   )
 
 set(LLVM_LIT_ARGS "-sv")
