--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -34,6 +34,8 @@ if isTrue(lit_config.params["exception_on_oom_enabled"]):
   config.available_features.add("exception_on_oom")
 if isTrue(lit_config.params['serialize_enabled']):
   config.available_features.add("serializer")
+if isTrue(lit_config.params["use_js_library_implementation"]):
+  config.available_features.add("jslib")
 
 if lit_config.params["profiler"] == "BB":
     config.available_features.add("basic_block_profiler")
