Conditionalize InternalBytecode dependency from the CMake build
Summary:
CircleCI builds were broken due to the new InternalBytecode dependency on python3.
Also, we shouldn't build the JS unless the flag is on.
Don't set the internal bytecode as a dependency of the VM unless the flag
`HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION` is on.

Reviewed By: willholen

Differential Revision: D17795965

fbshipit-source-id: 1508aa45bb9271d56b035224dc10173568299e31

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -60,4 +60,6 @@ add_subdirectory(BCGen)
 add_subdirectory(ConsoleHost)
 add_subdirectory(Regex)
 add_subdirectory(Platform)
-add_subdirectory(InternalBytecode)
+if(HERMESVM_USE_JS_LIBRARY_IMPLEMENTATION)
+  add_subdirectory(InternalBytecode)
+endif()
