Attach functions from Operations.cpp to HermesInternal
Summary:
Attached `ToObject`, `ToInteger`, and `ToLength` from Operations.cpp to HermesInternal JS object.
Added `HERMESVM_USE_JS_IMPLEMENTATION`.

Reviewed By: dulinriley

Differential Revision: D17371557

fbshipit-source-id: c8370bc69ed9956be01203ea2c430e9701348b05

--- a/lib/InternalBytecode/CMakeLists.txt
+++ b/lib/InternalBytecode/CMakeLists.txt
@@ -35,10 +35,16 @@ else()
   set(concatenate "type")
 endif()
 
+set(js_lib_sources
+  header.js
+  Number.js
+  footer.js
+  )
+
 add_custom_command(
   OUTPUT JSLib.js
-  COMMAND ${concatenate} Number.js > ${CMAKE_CURRENT_BINARY_DIR}/JSLib.js
-  DEPENDS Number.js
+  COMMAND ${concatenate} ${js_lib_sources} > ${CMAKE_CURRENT_BINARY_DIR}/JSLib.js
+  DEPENDS ${js_lib_sources}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   VERBATIM
 )
