Use python2/3 compatible dict membership operator in lit.cfg
Summary: This dict membership operator isn't compatible with python3, but the rest of the lit framework is.

Reviewed By: jbower-fb

Differential Revision: D17824000

fbshipit-source-id: 66bec462017f12ae6cdfc2904d8c84c2adce9bd0

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -18,7 +18,7 @@ if "icu_data" in lit_config.params:
     config.environment = { "ICU_DATA": lit_config.params["icu_data"] }
 
 # Optionally execute in a different directory so the output files stay there.
-if lit_config.params.has_key("test_exec_root"):
+if "test_exec_root" in lit_config.params:
     config.test_exec_root=lit_config.params["test_exec_root"]
 
 if isTrue(lit_config.params["debugger_enabled"]):
