Add libicu-dev to the Android CircleCI job
Summary:
The build of the host compiler for the Android build is currently
failing because ICU can't be found. This installs it.

Reviewed By: dulinriley

Differential Revision: D17838440

fbshipit-source-id: 54ced4419bd60bef72513225fa4d820fc2524f4d

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             mkdir -p "$HERMES_WS_DIR" "$HERMES_WS_DIR/output"
             ln -sf "$PWD" "$HERMES_WS_DIR/hermes"
             sudo apt-get update
-            sudo apt-get install -y cmake ninja-build
+            sudo apt-get install -y cmake ninja-build libicu-dev
             wait
             sudo cp /usr/bin/ninja /usr/bin/ninja.real
             # See top comment
