Add warning suppressions and fix build flags
Summary:
The Windows MSVC compiler has different warnings than GCC or Clang.
Add some warning ignores to our CMakeLists.txt.
Also add the correct RTTI flag to Windows builds of HostModel.cpp

Reviewed By: tmikov

Differential Revision: D17824001

fbshipit-source-id: 91f05463a64006f378c6e3b8f35ff19647a85791

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,6 +320,8 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR
 elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
   # C4068 unknown pragma
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -wd4068")
+  # C4200 nonstandard extension used: zero-sized array in struct/union
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -wd4200")
   # C4201 nonstandard extension used: nameless struct/union
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -wd4201")
   # Parallelize build
