--- a/API/hermes/CMakeLists.txt
+++ b/API/hermes/CMakeLists.txt
@@ -61,14 +61,28 @@ target_link_libraries(libhermes
   hermesVMRuntime
   ${CORE_FOUNDATION}
 )
-set_target_properties(libhermes PROPERTIES
-  # Declare our dependency on std::make_unique, and export all API symbols
-  COMPILE_FLAGS "-std=c++14 -fvisibility=default"
+
+if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR
+    "${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+  # Export all API symbols
+  set(compile_flags "-fvisibility=default")
   # The linker doesn't support -flto -Os, so make sure it's linked with -O3.
   # This only affects linking, not compilation, so without -flto it's a no-op.
   # In other words, if the compiler flags are -O0 -fno-lto, then the resulting
   # library will be -O0 in spite of setting -O3 here.
-  LINK_FLAGS "-O3 ${OPTIONAL_GC_SECTIONS} ${OPTIONAL_JNI_ONLOAD}"
+  set(link_flags "-O3 ${OPTIONAL_GC_SECTIONS} ${OPTIONAL_JNI_ONLOAD}")
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
+  # Same as above, but for windows. Note that there is no equivalent of -fvisibility=default.
+  set(compile_flags "")
+  set(link_flags "/O2 ${OPTIONAL_GC_SECTIONS} ${OPTIONAL_JNI_ONLOAD}")
+endif()
+
+set_target_properties(libhermes PROPERTIES
+  COMPILE_FLAGS "${compile_flags}"
+  LINK_FLAGS "${link_flags}"
+  # Declare our dependency on std::make_unique
+  CXX_STANDARD 14
+  CXX_STANDARD_REQUIRED 14
   # Avoid becoming liblibhermes (and there's already a target called 'hermes')
   OUTPUT_NAME hermes
   )
