Include MSVC++ 2015 redistributable dlls in Windows build
Summary:
This diff bundles the required MSVC++ DLLs with the program to avoid the
user having to install it separately.

Reviewed By: tmikov

Differential Revision: D17911513

fbshipit-source-id: 0344931f34c512235b0b5d0c5e90bb51ca58287d

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -349,6 +349,9 @@ jobs:
           command: |
             cd $Env:HERMES_WS_DIR
             Copy-Item -Path "icu\bin64\icu*.dll" -Destination "deps"
+            # Include MSVC++ 2015 redistributables
+            Copy-Item -Path "c:\windows\system32\msvcp140.dll" -Destination "deps"
+            Copy-Item -Path "c:\windows\system32\vcruntime140.dll" -Destination "deps"
 
       - run:
           name: Build Hermes for Windows
