Tidy up license headers [2/2]
Reviewed By: dulinriley

Differential Revision: D17872713

fbshipit-source-id: ef0c18f5ce53d0711ef2eb6fad7d118fa12515fb

--- a/include/hermes/Support/Config.h.in
+++ b/include/hermes/Support/Config.h.in
@@ -1,8 +1,10 @@
-// Copyright (c) Facebook, Inc. and its affiliates.
-//
-// This source code is licensed under the MIT license found in the LICENSE
-// file in the root directory of this source tree.
-//
+/*
+ * Copyright (c) Facebook, Inc. and its affiliates.
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
+
 // This file is processed by CMake.
 // See https://cmake.org/cmake/help/v3.0/command/configure_file.html.
 
