--- a/tools/repl/ReplConfig.h.in
+++ b/tools/repl/ReplConfig.h.in
@@ -1,8 +1,10 @@
-// Copyright (c) Facebook, Inc. and its affiliates.
-//
-// This source code is licensed under the MIT license found in the LICENSE
-// file in the root directory of this source tree.
-//
+/*
+ * Copyright (c) Facebook, Inc. and its affiliates.
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
+
 // This file is processed by CMake.
 // See https://cmake.org/cmake/help/v3.0/command/configure_file.html.
 
