--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -376,12 +376,14 @@ if (NOT ICU_FOUND)
   endif()
 endif()
 
+
+
 # ICU is available on Windows, but only since Windows 10 v1703.
 # Therefore, use it only as fallback.
 if (NOT ICU_FOUND AND HERMES_ENABLE_WIN10_ICU_FALLBACK AND
-    WIN32 AND # Windows 32 or 64 bit
+    (WIN32 OR CMAKE_SYSTEM_NAME STREQUAL "WindowsStore") AND # Windows 32 or 64 bit
     # At least Windows 10 version 1703 (aka Creators Update)
-    NOT ${CMAKE_SYSTEM_VERSION} VERSION_LESS "10.0.15063")
+    (NOT ${CMAKE_SYSTEM_VERSION} VERSION_LESS "10.0.15063" OR CMAKE_SYSTEM_NAME STREQUAL "WindowsStore"))
   add_definitions(-DUSE_WIN10_ICU)
   set(ICU_FOUND 1)
   set(ICU_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/external/icu_decls)
